- Oppdatert styre og vedtekter for 2008
svn path=/trunk/oslo.pm.org/htdocs/; revision=20

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -11,7 +11,7 @@
 
 <h3>Styremedlemmer</h3>
 <ul>
-  <li>Torbj&oslash;rn Lindahl</li>
+  <li>Geir Thomas Andersen</li>
   <li>Trond Michelsen</li>
   <li>Kirill Miazine</li>
   <li>Marcus Ramberg</li>
@@ -27,7 +27,7 @@
 <h3>Valgkomit&eacute;</h3>
 <ul>
   <li>Geir Thomas Andersen</li>
-  <li>Geir Thomas Andersen</li>
-  <li>Geir Thomas Andersen</li>
+  <li>Torbj&oslash;rn Lindahl</li>
+  <li>Marcus Ramberg</li>
 </ul>
 
