- Vis endringshistorikk på vedtektene
svn path=/trunk/oslo.pm.org/htdocs/; revision=25

--- a/vedtekter/vedtekter-2006-11-01.html
+++ b/vedtekter/vedtekter-2006-11-01.html
@@ -1,6 +1,6 @@
   <h1>Vedtekter for Oslo.pm - Oslo Perl Mongers</h1>
 
-  <p style="font-size: small;">Vedtatt p&aring; stiftelsesm&oslash;tet, 2006-11-01. Ingen endringer vedtatt etter dette.</p>
+  <p style="font-size: small;">Vedtatt p&aring; stiftelsesm&oslash;tet, 2006-11-01.</p>
 
   <hr>
 
