--- a/vedtekter/endringer.html
+++ b/vedtekter/endringer.html
@@ -1,4 +1,4 @@
-<h3>Vedtektsendringer</h3>
+<h3>Endringshistorikk</h3>
 <ul>
  <li><a href="/vedtekter/vedtekter-2006-11-01.html">Stiftelsesm&oslash;tet 2006-11-01</a>.
  <li><a href="/vedtekter/vedtekter-2007-11-29.html">&Aring;rsm&oslash;tet 2007-11-29</a>.
