--- a/vedtekter/vedtekter-2007-11-29.html
+++ b/vedtekter/vedtekter-2007-11-29.html
@@ -1,6 +1,6 @@
   <h1>Vedtekter for Oslo.pm - Oslo Perl Mongers</h1>
 
-  <p style="font-size: small;">Vedtatt p&aring; stiftelsesm&oslash;tet, <a href="/vedtekter/vedtekter-2006-11-01.html">2006-11-01</a>. Endret 2007-11-29.</p>
+  <p style="font-size: small;">Vedtatt p&aring; &aring;rsm&oslash;tet 2007-11-29.</p>
 
   <hr>
 
