--- a/vedtekter/vedtekter-2006-11-01.html
+++ b/vedtekter/vedtekter-2006-11-01.html
@@ -1,5 +1,3 @@
-  <h1>Vedtekter for Oslo.pm - Oslo Perl Mongers</h1>
-
   <p style="font-size: small;">Vedtatt p&aring; stiftelsesm&oslash;tet, 2006-11-01.</p>
 
   <hr>
@@ -7,68 +5,68 @@
   <h2>Art.1. Foreningens navn.</h2>
 
   <p>Foreningens navn er "Oslo Perl Mongers". Som forkortet
-  benevnelse på foreningen brukes "Oslo.pm".</p>
+  benevnelse p&aring; foreningen brukes "Oslo.pm".</p>
 
-  <h2>Art.2. Foreningens formål.</h2>
+  <h2>Art.2. Foreningens form&aring;l.</h2>
 
-  <p>Oslo Perl Mongers er en forening som har som formål:</p>
+  <p>Oslo Perl Mongers er en forening som har som form&aring;l:</p>
 
   <ul>
     <li>Fremme bruken og bevisstheten av og rundt
-    programmeringsspråket Perl og dets verktøy og
+    programmeringsspr&aring;ket Perl og dets verkt&oslash;y og
     kultur</li>
   </ul>
 
-  <p>Dette målet nås bl.a. gjennom:</p>
+  <p>Dette m&aring;let n&aring;s bl.a. gjennom:</p>
 
   <ul>
     <li>Tilby et faglig og sosialt treffsted for folk som er
-    interessert i programmeringsspråket Perl</li>
+    interessert i programmeringsspr&aring;ket Perl</li>
 
     <li>Fungere som katalysator for fri programvare-prosjekter der
     Perl benyttes aktivt</li>
 
-    <li>Avholde regelmessige medlemsmøter</li>
+    <li>Avholde regelmessige medlemsm&oslash;ter</li>
   </ul>
 
   <h2>Art.3. Medlemskap og kontigent.</h2>
 
-  <p>For å være medlem i foreningen kreves kun at man
-  er meldt på foreningens offisielle epost-liste for
+  <p>For &aring; v&aelig;re medlem i foreningen kreves kun at man
+  er meldt p&aring; foreningens offisielle epost-liste for
   annonseringer. Foreningen har ingen kontigent.</p>
 
   <h2>Art.4. Foreningens ledelse.</h2>
 
-  <p>Foreningens høyeste myndighet er
-  årsmøtet. Årsmøtet utpeker et styre som
+  <p>Foreningens h&oslash;yeste myndighet er
+  &aring;rsm&oslash;tet. &Aring;rsm&oslash;tet utpeker et styre som
   leder foreningens daglige virksomhet.</p>
 
   <h2>Art.5. Styret.</h2>
 
-  <p>Styret består av minst 4 og maks 6 medlemmer, inkludert
-  leder. Leder skal velges ved særskilt valg. I tillegg skal det
+  <p>Styret best&aring;r av minst 4 og maks 6 medlemmer, inkludert
+  leder. Leder skal velges ved s&aelig;rskilt valg. I tillegg skal det
   velges minst 1 og maks 2 varamedlemmer. Leder, samtlige
-  styremedlemmer og varamedlemmer velges for et år av
-  gangen. Varamedlemmer har møterett i styrets møter, men har bare
-  stemmerett (i valgt rekkefølge) dersom noen av styrets faste
+  styremedlemmer og varamedlemmer velges for et &aring;r av
+  gangen. Varamedlemmer har m&oslash;terett i styrets m&oslash;ter, men har bare
+  stemmerett (i valgt rekkef&oslash;lge) dersom noen av styrets faste
   medlemmer har forfall.</p>
 
-  <p>Styrets møter ledes av lederen. Hvis styret har fler enn 5
+  <p>Styrets m&oslash;ter ledes av lederen. Hvis styret har fler enn 5
   medlemmer, vil lederens stemme telle dobbelt ved stemmelikhet.  Det
-  føres protokoll over styrets forhandlinger.</p>
+  f&oslash;res protokoll over styrets forhandlinger.</p>
 
-  <h2>Art.6. Årsmøtet.</h2>
+  <h2>Art.6. &Aring;rsm&oslash;tet.</h2>
 
-  <p>Vanlig årsmøte avholdes innen utgangen av
-  november måned.
- Styret innkaller til møtet via
+  <p>Vanlig &aring;rsm&oslash;te avholdes innen utgangen av
+  november m&aring;ned.
+ Styret innkaller til m&oslash;tet via
   foreningens offisielle epost-liste for annonseringer med minst 3
   ukers varsel.</p>
 
   <p>Innkallelsen skal inneholde:</p>
 
   <ul>
-    <li>Forslag til årsberetning</li>
+    <li>Forslag til &aring;rsberetning</li>
 
     <li>Forslag til regnskap</li>
 
@@ -81,23 +79,23 @@
     <li>Mottatte forslag</li>
   </ul>
 
-  <p>Forslag til vedtektsendringer må være styret i hende senest
-  utgangen av august for å kunne behandles på årsmøtet. Andre forslag
-  som ønskes behandlet, må være styret i hende senest 1 uke før
-  møtet. Endringer i vedtektene trer i kraft etter at årsmøtet er
+  <p>Forslag til vedtektsendringer m&aring; v&aelig;re styret i hende senest
+  utgangen av august for &aring; kunne behandles p&aring; &aring;rsm&oslash;tet. Andre forslag
+  som &oslash;nskes behandlet, m&aring; v&aelig;re styret i hende senest 1 uke f&oslash;r
+  m&oslash;tet. Endringer i vedtektene trer i kraft etter at &aring;rsm&oslash;tet er
   slutt.</p>
 
-  <p>Dagsorden for vanlig årsmøte:</p>
+  <p>Dagsorden for vanlig &aring;rsm&oslash;te:</p>
 
   <ul>
-    <li>Valg av møteleder</li>
+    <li>Valg av m&oslash;teleder</li>
 
-    <li>Valg av to medlemmer til å undertegne
+    <li>Valg av to medlemmer til &aring; undertegne
     protokollen</li>
 
     <li>Innkallelsens lovlighet</li>
 
-    <li>Årsberetning</li>
+    <li>&Aring;rsberetning</li>
 
     <li>Regnskap</li>
 
@@ -110,13 +108,13 @@
 
         <li>Varamedlemmer</li>
 
-        <li>Valgkomité på 3 medlemmer</li>
+        <li>Valgkomité p&aring; 3 medlemmer</li>
 
         <li>Eventuelle andre valg etter forslag fra styret</li>
       </ul>
     </li>
 
-    <li>Forslag til budsjett for kommende år</li>
+    <li>Forslag til budsjett for kommende &aring;r</li>
 
     <li>Forslag til endringer av vedtekter</li>
 
@@ -126,58 +124,58 @@
   </ul>
 
   <p>Alle medlemmer (pluss eventuelle andre invitert av styret) har
-  møte- og talerett. Medlemmer som har vært gyldig medlem (i henhold
-  til pkt.3) siden innkallingen til årsmøtet har stemmerett. Årsmøtet
+  m&oslash;te- og talerett. Medlemmer som har v&aelig;rt gyldig medlem (i henhold
+  til pkt.3) siden innkallingen til &aring;rsm&oslash;tet har stemmerett. &Aring;rsm&oslash;tet
   er etter lovlig innkalling alltid beslutningsdyktig.  Styret
-  innkaller til møtet via foreningens offisielle epost-liste for
+  innkaller til m&oslash;tet via foreningens offisielle epost-liste for
   annonseringer med minst 3 ukers varsel.</p>
 
 
 
-  <h2>Art.7. Ekstraordinært årsmøte.</h2>
+  <h2>Art.7. Ekstraordin&aelig;rt &aring;rsm&oslash;te.</h2>
 
-  <p>Ekstraordinært årsmøte skal holdes innen 5 uker når styrets
+  <p>Ekstraordin&aelig;rt &aring;rsm&oslash;te skal holdes innen 5 uker n&aring;r styrets
   leder, eller to av styrets medlemmer eller 1/5 av de
-  stemmeberettigede medlemmene krever det. På et ekstraordinært
-  årsmøte kan kun behandles saker nevnt i innkallingen.</p>
+  stemmeberettigede medlemmene krever det. P&aring; et ekstraordin&aelig;rt
+  &aring;rsm&oslash;te kan kun behandles saker nevnt i innkallingen.</p>
 
   <h2>Art.8. Om styrets virksomhet.</h2>
 
-  <p>Med unntak av lederen (som blir valgt direkte av årsmøtet)
+  <p>Med unntak av lederen (som blir valgt direkte av &aring;rsm&oslash;tet)
   bestemmer styret selv innbyrdes fordeling av arbeidsoppgaver. Styret
-  skal imidlertid utpeke kasserer og sekretær blant sine faste
-  medlemmer. Styret er beslutningsdyktig når minst 3 medlemmer
-  (medregnet møtende varamedlemmer) er tilstede. I spesielle tilfeller
-  kan beslutninger fattes av styrets leder etter samråd med de andre
+  skal imidlertid utpeke kasserer og sekret&aelig;r blant sine faste
+  medlemmer. Styret er beslutningsdyktig n&aring;r minst 3 medlemmer
+  (medregnet m&oslash;tende varamedlemmer) er tilstede. I spesielle tilfeller
+  kan beslutninger fattes av styrets leder etter samr&aring;d med de andre
   styremedlemmene. Styret fastlegger program for foreningens
-  aktiviteter, og koordinerer gjennomføringen av disse. Styret
+  aktiviteter, og koordinerer gjennomf&oslash;ringen av disse. Styret
   beslutter om de individuelle aktiviteter er kun for medlemmer og
-  inviterte, eller om de er åpne for alle.  Styret kan for spesielle
+  inviterte, eller om de er &aring;pne for alle.  Styret kan for spesielle
   arrangementer fastsette en deltakeravgift. Styret skal utarbeide og
-  fremlegge for årsmøtet årsberetning og revidert regnskap, samt
-  forslag til budsjett for kommende år. Styret representerer
-  foreningens evt. eierinteresser.  Årsmøtet fastsetter nærmere regler
-  for dekning av utgifter til styrets arbeid. Foreningens regnskapsår
-  følger kalenderåret.</p>
+  fremlegge for &aring;rsm&oslash;tet &aring;rsberetning og revidert regnskap, samt
+  forslag til budsjett for kommende &aring;r. Styret representerer
+  foreningens evt. eierinteresser.  &Aring;rsm&oslash;tet fastsetter n&aelig;rmere regler
+  for dekning av utgifter til styrets arbeid. Foreningens regnskaps&aring;r
+  f&oslash;lger kalender&aring;ret.</p>
 
-  <h2>Art.9. Økonomi.</h2>
+  <h2>Art.9. &Oslash;konomi.</h2>
 
-  <p>Om foreningens aktiviteter går i overskudd, skal overskuddet
-  benyttes til aktiviteter som er i tråd med foreningens formål.</p>
+  <p>Om foreningens aktiviteter g&aring;r i overskudd, skal overskuddet
+  benyttes til aktiviteter som er i tr&aring;d med foreningens form&aring;l.</p>
 
   <h2>Art.10. Endring av vedtekter.</h2>
 
-  <p>Vedtektene kan endres av årsmøtet etter forslag fra styret eller
-  medlem etter reglene i Art.6. Vedtektsendringer skal for å være
-  vedtatt, ha flertall med minst 2/3 av de avgitte stemmer på
-  årsmøtet. Avstemning om vedtektsendringer kan kreves å være
+  <p>Vedtektene kan endres av &aring;rsm&oslash;tet etter forslag fra styret eller
+  medlem etter reglene i Art.6. Vedtektsendringer skal for &aring; v&aelig;re
+  vedtatt, ha flertall med minst 2/3 av de avgitte stemmer p&aring;
+  &aring;rsm&oslash;tet. Avstemning om vedtektsendringer kan kreves &aring; v&aelig;re
   skriftlig, og blanke stemmer teller som avgitte stemmer.</p>
 
-  <h2>Art.11. Oppløsning.</h2>
+  <h2>Art.11. Oppl&oslash;sning.</h2>
 
-  <p>Beslutning om oppløsning av foreningen må skje på et vanlig
-  årsmøte, og må ha minst 2/3 flertall av de avgitte
+  <p>Beslutning om oppl&oslash;sning av foreningen m&aring; skje p&aring; et vanlig
+  &aring;rsm&oslash;te, og m&aring; ha minst 2/3 flertall av de avgitte
   stemmer. Skriftlig avstemning kan kreves som for
-  vedtektsendringer. Ved gyldig beslutning om oppløsning skal
-  foreningens midler tilfalle et almennyttig formål, i tråd med
-  foreningens formålsparagraf, etter møtets beslutning.</p>
+  vedtektsendringer. Ved gyldig beslutning om oppl&oslash;sning skal
+  foreningens midler tilfalle et almennyttig form&aring;l, i tr&aring;d med
+  foreningens form&aring;lsparagraf, etter m&oslash;tets beslutning.</p>
