- Korrigere valgkomité lista
svn path=/trunk/oslo.pm.org/htdocs/; revision=28

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -11,9 +11,9 @@
 
 <h3>Styremedlemmer</h3>
 <ul>
-  <li>Geir Thomas Andersen</li>
-  <li>Trond Michelsen</li>
+  <li>Torbj&oslash;rn Lindahl</li>
   <li>Kirill Miazine</li>
+  <li>Trond Michelsen</li>
   <li>Marcus Ramberg</li>
   <li>Arne Sommer</li>
 </ul>
