--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -11,7 +11,7 @@
 
 <h3>Styremedlemmer</h3>
 <ul>
-  <li>Torbj&oslash;rn Lindahl</li>
+  <li>Geir Thomas Andersen</li>
   <li>Kirill Miazine</li>
   <li>Trond Michelsen</li>
   <li>Marcus Ramberg</li>
