- La til arbeidsplasser for de fleste styremedlemmene
svn path=/trunk/oslo.pm.org/htdocs/; revision=30

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -6,28 +6,28 @@
 
 <h3>Leder</h3>
 <ul>
-  <li>Salve J. Nilsen</li>
+  <li>Salve J. Nilsen (Meteorologisk Institutt)</li>
 </ul>
 
 <h3>Styremedlemmer</h3>
 <ul>
-  <li>Geir Thomas Andersen</li>
-  <li>Kirill Miazine</li>
-  <li>Trond Michelsen</li>
-  <li>Marcus Ramberg</li>
+  <li>Geir Thomas Andersen (Runbox AS)</li>
+  <li>Kirill Miazine (F&oslash;yen Advokatfirma DA)</li>
+  <li>Trond Michelsen (Meteorologisk Institutt)</li>
+  <li>Marcus Ramberg (Startsiden AS)</li>
   <li>Arne Sommer</li>
 </ul>
 
 <h3>Varamedlemmer</h3>
 <ul>
-  <li>Dag Asheim</li>
-  <li>Bj&oslash;rn Ove W&aelig;r&aring;s</li>
+  <li>Dag Asheim (Linpro)</li>
+  <li>Bj&oslash;rn Ove W&aelig;r&aring;s (Linpro AS)</li>
 </ul>
 
 <h3>Valgkomit&eacute;</h3>
 <ul>
-  <li>Geir Thomas Andersen</li>
+  <li>Geir Thomas Andersen (Runbox AS)</li>
   <li>Torbj&oslash;rn Lindahl</li>
-  <li>Marcus Ramberg</li>
+  <li>Marcus Ramberg (Startsiden AS)</li>
 </ul>
 
