- Added Torbjørn's workplace
svn path=/trunk/oslo.pm.org/htdocs/; revision=32

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -27,7 +27,7 @@
 <h3>Valgkomit&eacute;</h3>
 <ul>
   <li>Geir Thomas Andersen (Runbox AS)</li>
-  <li>Torbj&oslash;rn Lindahl</li>
+  <li>Torbj&oslash;rn Lindahl (DiaGenic ASA)</li>
   <li>Marcus Ramberg (Startsiden AS)</li>
 </ul>
 
