- Typo fixes, launch update
svn path=/trunk/oslo.pm.org/htdocs/; revision=34

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -11,23 +11,23 @@
 
 <h3>Styremedlemmer</h3>
 <ul>
-  <li>Geir Thomas Andersen (Runbox AS)</li>
+  <li>Geir Thomas Andersen (<a href="http://runbox.no/">Runbox AS</a>)</li>
   <li>Kirill Miazine (F&oslash;yen Advokatfirma DA)</li>
-  <li>Trond Michelsen (Meteorologisk Institutt)</li>
-  <li>Marcus Ramberg (Startsiden AS)</li>
+  <li>Trond Michelsen (<a href="http://met.no/>Meteorologisk Institutt</a>)</li>
+  <li>Marcus Ramberg (<a href="http://startsiden.no/">Startsiden AS</a>)</li>
   <li>Arne Sommer</li>
 </ul>
 
 <h3>Varamedlemmer</h3>
 <ul>
-  <li>Dag Asheim (Linpro)</li>
-  <li>Bj&oslash;rn Ove W&aelig;r&aring;s (Linpro AS)</li>
+  <li>Dag Asheim (<a href="http://linpro.no/">Linpro AS</a>)</li>
+  <li>Bj&oslash;rn Ove W&aelig;r&aring;s (<a href="http://linpro.no/">Linpro AS</a>)</li>
 </ul>
 
 <h3>Valgkomit&eacute;</h3>
 <ul>
-  <li>Geir Thomas Andersen (Runbox AS)</li>
-  <li>Torbj&oslash;rn Lindahl (DiaGenic ASA)</li>
-  <li>Marcus Ramberg (Startsiden AS)</li>
+  <li>Geir Thomas Andersen (<a href="http://runbox.no/">Runbox AS</a>)</li>
+  <li>Torbj&oslash;rn Lindahl (<a href="http://www.diagenic.com/">DiaGenic ASA</a>)</li>
+  <li>Marcus Ramberg (<a href="http://startsiden.no/">Startsiden AS</a>)</li>
 </ul>
 
