--- a/arrangementer/2008-01-02-sosialt.html
+++ b/arrangementer/2008-01-02-sosialt.html
@@ -1,13 +1,14 @@
 <!-- $Id$ -->
 <h3>Desember-medlemsm&oslash;tet i Oslo.pm</h3>
 
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 5. desember 2007, klokken
+<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 2. januar 2008, klokken
 18:30</strong>. Vi treffes p&aring; 
 <strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møoslash;tet blir <a href="http://friprog.no/">Kompetansesenteret for Fri Programvare</a> sin konferanse i
-April, Microsoft sitt utspill om &aring; gj&oslash;re "Windows til plattform for
-norsk &aring;pen kildekode" og alt annet vi finner interessant.
-
+Tema for m&oslash;tet blir <a href="http://friprog.no/">Kompetansesenteret
+for Fri Programvare</a> sin konferanse i April, Microsoft sitt <a
+href="http://digi.no/php/art.php?id=501168">utspill</a> om &aring;
+gj&oslash;re "Windows til plattform for norsk &aring;pen kildekode" og 
+alt annet vi finner interessant.
 </p>
