--- a/arrangementer/2008-01-02-sosialt.html
+++ b/arrangementer/2008-01-02-sosialt.html
@@ -6,9 +6,8 @@
 <strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for m&oslash;tet blir <a href="http://friprog.no/">Kompetansesenteret
-for Fri Programvare</a> sin konferanse i April, Microsoft sitt <a
-href="http://digi.no/php/art.php?id=501168">utspill</a> om &aring;
-gj&oslash;re "Windows til plattform for norsk &aring;pen kildekode" og 
-alt annet vi finner interessant.
+Tema for m&oslash;tet blir <a href="http://friprog.no/">friprog.no</a>
+sin konferanse i April, Microsoft sitt utspill om &aring; gj&oslash;re
+"<a href="http://digi.no/php/art.php?id=501168">Windows til plattform
+for norsk &aring;pen kildekode</a>" - og alt annet vi finner interessant.
 </p>
