- Arne works at TietoEnator :)
svn path=/trunk/oslo.pm.org/htdocs/; revision=43

--- a/styre/styre-2007-11-29.html
+++ b/styre/styre-2007-11-29.html
@@ -15,7 +15,7 @@
   <li>Kirill Miazine (F&oslash;yen Advokatfirma DA)</li>
   <li>Trond Michelsen (<a href="http://met.no/>Meteorologisk Institutt</a>)</li>
   <li>Marcus Ramberg (<a href="http://startsiden.no/">Startsiden AS</a>)</li>
-  <li>Arne Sommer</li>
+  <li>Arne Sommer (TietoEnator)</li>
 </ul>
 
 <h3>Varamedlemmer</h3>
