--- a/kurs/gabor-szabo-test-tutorial.html
+++ b/kurs/gabor-szabo-test-tutorial.html
@@ -21,7 +21,6 @@ web-klient for &aring; teste web-baserte applikasjoner.</p>
 kvalitetssikring.  Anvende Perl i ulike typer testing (som GUI, web,
 nettverk). Bruk av testrammeverket som kommer med Perl.</p>
 
-
 <h2>Kursformat</h2>
 
 <p>24 klasseromstimer (3 fulle dager). Omtrent 50% av tiden til
@@ -47,7 +46,7 @@ og nettverksutstyr</p>
   hvordan?</li>
   <li>Perl sine verkt&oslash;y for testing av Perlmoduler</li>
   <li>Microsoft Windows GUI applikasjoner</li>
-  <Li>Kommandolinjeapplikasjoner</li>
+  <li>Kommandolinjeapplikasjoner</li>
   <li>Testing av nettverksutstyr med kommandolinjegrensesnitt</li>
   <li>Web-applikasjoner enten med tekstnettleser eller med Internet
   Explorer</li>
@@ -80,7 +79,15 @@ CPAN-moduler.  Han er ogs&aring; utvikler av og ansvarlig for <a
 href="http://www.cpanforum.com/">CPAN::Forum</a> og for <a
 href="http://pcas.szabgab.com/">Perl Community AdServer</a>.</p>
 
-<h2>Påmelding</h2>
+<h3>Kursavgift</h3>
+
+<p>Kurset koster NOK 10,000 pr. person, og overskuddet vil g&aring; til
+del-finansiering Oslo.pm sitt QA Hackathon som arrangeres 5. til 7. april
+2008.</p>
+
+<p>Kurset vil ha maks 12 deltagere. (P&aring;meldte pr. 29. feb 2008: <strong>7</strong>)</p>
+
+<h2>P&aring;melding</h2>
 
 <p>Kontakt Gabor p&aring; epost: <a
 href="mailto:szabgab@gmail.com">szabgab@gmail.com</a> for
