--- a/kurs/gabor-szabo-test-tutorial.html
+++ b/kurs/gabor-szabo-test-tutorial.html
@@ -82,10 +82,11 @@ href="http://pcas.szabgab.com/">Perl Community AdServer</a>.</p>
 <h3>Kursavgift</h3>
 
 <p>Kurset koster NOK 10,000 pr. person, og overskuddet vil g&aring; til
-del-finansiering Oslo.pm sitt QA Hackathon som arrangeres 5. til 7. april
-2008.</p>
+del-finansiering av Oslo.pm sitt QA Hackathon som arrangeres 5. til 7.
+april 2008.</p>
 
-<p>Kurset vil ha maks 12 deltagere. (P&aring;meldte pr. 29. feb 2008: <strong>7</strong>)</p>
+<p>Kurset vil ha maks 12 deltagere. (P&aring;meldte pr. 29. feb 2008:
+<strong>7</strong>)</p>
 
 <h2>P&aring;melding</h2>
 
