- CSS updates - Fixed the name of the X Window system
svn path=/trunk/oslo.pm.org/htdocs/; revision=48

--- a/kurs/gabor-szabo-test-tutorial.html
+++ b/kurs/gabor-szabo-test-tutorial.html
@@ -51,7 +51,7 @@ og nettverksutstyr</p>
   <li>Web-applikasjoner enten med tekstnettleser eller med Internet
   Explorer</li>
   <li>Databasetesting</li>
-  <li>X-Windows testing</li>
+  <li>X Window System testing</li>
   <li>Kort om XP - Extreme Programming</li>
   <li>Bygge regresjonstestverkt&oslash;y</li>
 </ul>
