- Fix character entity
svn path=/trunk/oslo.pm.org/htdocs/; revision=52

--- a/arrangementer/2008-04-05-qa-hackathon.html
+++ b/arrangementer/2008-04-05-qa-hackathon.html
@@ -6,7 +6,7 @@ men hvis du bryr deg om detaljene rundt <em>packaging</em>, Perl sitt
 <em>Quality Assurance</em> tema, s&aring; er du hjertelig velkommen
 til &aring; bidra!</p>
 
-<p>Detaljer rundt arrangemetet finnes på Perl QA mailinglista sin wiki,
+<p>Detaljer rundt arrangemetet finnes p&aring; Perl QA mailinglista sin wiki,
 men de viktigste stikkordene er <em>Unconference</em>, <em>Quality
 Assurance</em>, <em>Hacking</em>, <em>5.  til 7. april 2008</em> og
 <em>sosialiteter</em>.</p>
