- Improvements to the Hackathon text
svn path=/trunk/oslo.pm.org/htdocs/; revision=53

--- a/arrangementer/2008-04-05-qa-hackathon.html
+++ b/arrangementer/2008-04-05-qa-hackathon.html
@@ -1,15 +1,17 @@
-<h2>Oslo.pm arrangerer et QA hackathon!</h2>
+<h2>Oslo.pm arrangerer QA hackathon!</h2>
 
-<p>I utgangspunktet er arrangementet kun for spesielt interesserte,
-men hvis du bryr deg om detaljene rundt <em>packaging</em>, Perl sitt
-<em>toolchain</em>, CPAN sine st&oslash;ttesystemer, TAP eller andre
-<em>Quality Assurance</em> tema, s&aring; er du hjertelig velkommen
-til &aring; bidra!</p>
+<p>Vi har invitert kjernemedlemmer i Perl sitt Quality assurance milj&oslash;
+til Oslo! I utgangspunktet er arrangementet kun for spesielt interesserte,
+men hvis du bryr deg om detaljer rundt <em>packaging</em>, Perl sin
+<em>toolchain</em>, CPAN sine st&oslash;ttesystemer (inkludert CPANTS og
+annen infrastruktur), TAP eller andre QA tema, s&aring; er du hjertelig
+velkommen til &aring; bidra!</p>
 
 <p>Detaljer rundt arrangemetet finnes p&aring; Perl QA mailinglista sin wiki,
 men de viktigste stikkordene er <em>Unconference</em>, <em>Quality
-Assurance</em>, <em>Hacking</em>, <em>5.  til 7. april 2008</em> og
-<em>sosialiteter</em>.</p>
+Assurance</em>, <em>5. til 7. april 2008</em>, <em>Hacking</em> og
+<em>Sosialiteter</em>. For &aring; melde deg p&aring;, skriv deg inn p&aring;
+temasida nedenfor.</p>
 
 <ul>
   <li><a href="http://perl-qa.hexten.net/wiki/index.php/Oslo_QA_Hackathon_2008">Oversikt over arrangementet</a></li>
