- Rename course file - Update number of participants
svn path=/trunk/oslo.pm.org/htdocs/; revision=56

--- a/kurs/2008-04-02-gabor-szabo-test-tutorial.html
+++ b/kurs/2008-04-02-gabor-szabo-test-tutorial.html
@@ -85,8 +85,10 @@ href="http://pcas.szabgab.com/">Perl Community AdServer</a>.</p>
 del-finansiering av Oslo.pm sitt QA Hackathon som arrangeres 5. til 7.
 april 2008.</p>
 
-<p>Kurset vil ha maks 12 deltagere. (P&aring;meldte pr. 29. feb 2008:
-<strong>7</strong>)</p>
+<p>Kurset vil ha maks 12 deltagere. (P&aring;meldte pr. 10. mar 2008:
+<strong>12</strong>. Venteliste: <strong>1</strong>. Vi forventer
+noen avmeldinger, s&aring; meld deg p&aring; selv om du havner p&aring
+ventelista.)</p>
 
 <h2>P&aring;melding</h2>
 
