--- a/kurs/2008-04-02-gabor-szabo-test-tutorial.html
+++ b/kurs/2008-04-02-gabor-szabo-test-tutorial.html
@@ -26,6 +26,17 @@ nettverk). Bruk av testrammeverket som kommer med Perl.</p>
 <p>24 klasseromstimer (3 fulle dager). Omtrent 50% av tiden til
 &oslash;velser.</p>
 
+<h2>Tid/Sted</h2>
+<dl>
+ <dt>Sted:</dt>
+ <dd>Linpro sitt lokale p&aring; Storo, <a href="http://linpro.no/no/om_linpro/her_finner_du_oss">Vitaminveien 1</a>.</dd>
+
+ <dt>Tid:</dt>
+ <dd><strong>Onsdag 2. april</strong>: 09:00-17:00</dd>
+ <dd><strong>Torsdag 3. april</strong>: 09:00-17:00</dd>
+ <dd><strong>Fredag 4. aprili</strong>: 09:00-17:00</dd>
+</dl>
+
 <h2>Forkunnskaper</h2>
 
 <p>Seks m&aring;neders erfaring med programmering i Perl, eller
@@ -78,6 +89,7 @@ konferanser.</p>
 CPAN-moduler.  Han er ogs&aring; utvikler av og ansvarlig for <a
 href="http://www.cpanforum.com/">CPAN::Forum</a> og for <a
 href="http://pcas.szabgab.com/">Perl Community AdServer</a>.</p>
+
 
 <h3>Kursavgift</h3>
 
