Added links about Rakudo Perl and Linpro, plus reworded the main intro a little
svn path=/trunk/oslo.pm.org/htdocs/; revision=65

--- a/arrangementer/2008-09-03-sosialt.html
+++ b/arrangementer/2008-09-03-sosialt.html
@@ -5,4 +5,4 @@
 klokken 18:30</strong>. Vi treffes p&aring; 
 <strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysers gate 1</strong>.</p>
 
-<p>Denne gangen har Karl Rune Nilsen lovet oss en introduksjon til hvordan lage tester i Rakudo Perl! </p>
+<p>Denne gangen har Karl Rune Nilsen (<a href="http://linpro.no/">Linpro</a>) lovet oss en introduksjon til hvordan lage tester i <a href="http://rakudo.org/">Rakudo Perl</a> (Parrot-implementasjonen av Perl 6.)</p>
