- Legg til instruksjoner for oppmøte
svn path=/trunk/oslo.pm.org/htdocs/; revision=72

--- a/arrangementer/2008-11-28-genfors.html
+++ b/arrangementer/2008-11-28-genfors.html
@@ -5,6 +5,8 @@
 18:30</strong>. Vi treffes p&aring;
 <strong><a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">F&Oslash;YEN</a>, C J Hambros plass 2 (v/Tinghuset)</strong>.</p>
 
+<p>Oppm&oslash;te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppm&oslash;tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p>
+
 <p>
 Agenda for m&oslash;tet er:
 </p>
