- Add info about Marcus' talk about MojoMojo, and move text to frontpage
svn path=/trunk/oslo.pm.org/htdocs/; revision=76

--- a/arrangementer/2009-01-07-ekstra-genfors-og-mojomojo.html
+++ b/arrangementer/2009-01-07-ekstra-genfors-og-mojomojo.html
@@ -1,9 +1,9 @@
 <!-- $Id$ -->
-<h3>Ekstraordin&aelig;rt &aring;rsm&oslash;te 2008 for Oslo.pm</h3>
+<h3>Intro til MojoMojo, samt ekstraordin&aelig;rt &aring;rsm&oslash;te 2008 for Oslo.pm</h3>
 
 <p>Oslo.pm har ekstraordin&aelig;rt &aring;rsm&oslash;te <strong>onsdag 7. januar 2009, klokken
 18:30</strong>. <!-- Vi treffes p&aring;
-<strong><a href="http://www.foyen.no/" title="Link firmasider">F&Oslash;YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>. --> Sted blir annonsert senere.</p>
+<strong><a href="http://www.foyen.no/" title="Link firmasider">F&Oslash;YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>. --> Sted blir annonsert senere. I tillegg introduserer Marcus Ramberg Oslo.pm sin nye <a href="http://wiki.oslo.pm.org/">wiki</a> basert p&aring; <a href="http://search.cpan.org/~mramberg/MojoMojo/">MojoMojo</a>.</p>
 
 <!-- p>Oppm&oslash;te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppm&oslash;tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p -->
 
