- Specify agenda purpose
svn path=/trunk/oslo.pm.org/htdocs/; revision=77

--- a/arrangementer/2009-01-07-ekstra-genfors-og-mojomojo.html
+++ b/arrangementer/2009-01-07-ekstra-genfors-og-mojomojo.html
@@ -8,7 +8,7 @@
 <!-- p>Oppm&oslash;te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppm&oslash;tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p -->
 
 <p>
-Agenda for m&oslash;tet er:
+Agenda for &aring;rsm&oslash;tet er:
 </p>
 <ol>
   <li> &Aring;pning; valg av m&oslash;teleder og referent.</li>
