- Typo fixes etc.
svn path=/trunk/oslo.pm.org/htdocs/; revision=79

--- a/kurs/2009-04-21-gabor-szabo-test-tutorial.html
+++ b/kurs/2009-04-21-gabor-szabo-test-tutorial.html
@@ -1,4 +1,4 @@
-<h1>4 dagers kurs om Testautomatisering med Perl</h1>
+<h1>4 dagers kurs om test-automatisering med Perl</h1>
 
 <p>21. til 24. april, i Redpill-Linpro sine lokaler p&aring; Storo i
 Oslo. Kurset holdes p&aring; engelsk.</p>
@@ -7,8 +7,8 @@ Oslo. Kurset holdes p&aring; engelsk.</p>
 alt fra forberedelse av konfigurasjonsfiler f&oslash;r testing til
 analyse av logger etter testen. Utviklingen har ikke st&aring;tt
 stille, og idag kan Perl brukes i alle deler av et automatisk
-testmilj&oslash; - inkludert det &aring; simulere brukere ved &aring;
-styre mus og manipulere applikasjoner under Windows, og fungere som en
+testmilj&oslash; - fra &aring; simulere brukere ved &aring; styre mus
+og manipulere applikasjoner under Windows, til &aring; fungere som en
 web-klient for &aring; teste web-baserte applikasjoner.</p>
 
 <h2>M&aring;lgruppe</h2>
@@ -28,7 +28,7 @@ nettverk). Bruk av testrammeverket som kommer med Perl.</p>
 <h2>Tid/Sted</h2>
 <dl>
  <dt>Sted:</dt>
- <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>.</dd>
+ <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
 
  <dt>Tid:</dt>
  <dd><strong>Tirsdag 21. april</strong>: 09:00-17:00</dd>
@@ -40,16 +40,15 @@ nettverk). Bruk av testrammeverket som kommer med Perl.</p>
 <h2>Forkunnskaper</h2>
 
 <p>Seks m&aring;neders erfaring med programmering i Perl, eller
-introduksjonskurs i Perl</p>
+introduksjonskurs i Perl.</p>
 
 <h2>Innhold</h2>
 
-<p>F&oslash;rst vil vi l&aelig;re om de grunnleggende
-testverkt&oslash;yene og -rammeverkene som er tilgjengelig i Perl ved
-&aring; se p&aring; unit-testing av Perlmoduler.  Deretter utvider vi
-verkt&oslash;ysettet for &aring; teste andre typer applikasjoner.  Vi
-vil se p&aring; testing av Windows brukergrensesnitt, webapplikasjoner
-og nettverksutstyr</p>
+<p>Vi starter med de grunnleggende testverkt&oslash;yene og -rammeverkene som
+er tilgjengelig i Perl, spesifikt ved &aring; utforske unit-testing av
+Perl-moduler.  Deretter utvider vi verkt&oslash;ysettet for &aring; teste
+andre typer applikasjoner, inkludert testing av Windows brukergrensesnitt,
+webapplikasjoner og nettverksutstyr.</p>
 
 <h2>Stikkord</h2>
 <ul>
@@ -76,11 +75,11 @@ og nettverksutstyr</p>
 </ul>
 
 <p>Kurset holdes p&aring; Engelsk. Instrukt&oslash;r er Gabor Szabo
-fra Perl Training Israel, og arrangeres av Gabor Szabo i samarbeid med
+(Perl Training Israel), og arrangeres av Gabor Szabo i samarbeid med
 <a href="http://oslo.pm.org/">Oslo Perl Mongers</a>
 og <a href="http://redpill-linpro.no/">Redpill-Linpro</a>.</p>
 
-<h2>Om kursholderen</h2>
+<h2>Om instrukt&oslash;ren</h2>
 
 <p>Gabor har brukt Perl siden 1995, og undervist det siden 2000 via
 sitt firma <a href="http://www.pti.co.il/">Perl Training
@@ -92,17 +91,17 @@ Checkpoint.</p>
 Mongers i Israel, inkludert arrangering av YAPC og OSDC konferanser
 siden 2003. Han har holdt flere foredrag p&aring; YAPC::EU
 konferanser. Han mottok <a href="http://www.whitecamel.org/">the White
-Camel Award</a> i 2008 for sine bidrag her.</p>
+Camel Award</a> i 2008 for sine bidrag der.</p>
 
 <p>Gabor er en CPAN forfatter og har bidratt med tester til mange
 CPAN-moduler.  Han er ogs&aring; utvikler av og ansvarlig for <a
-href="http://www.cpanforum.com/">CPAN::Forum</a> og for <a
-href="http://pcas.szabgab.com/">Perl Community AdServer</a>, samt
-hovedutvikler av  <a href="http://padre.perlide.org/">Padre, the
+href="http://www.cpanforum.com/">CPAN::Forum</a>, for <a
+href="http://pcas.szabgab.com/">Perl Community AdServer</a> og
+hovedutvikler av <a href="http://padre.perlide.org/">Padre, the
 Perl IDE</a>.</p>
 
 
-<h3>Kursavgift</h3>
+<h2>Kursavgift</h2>
 
 <p>Kurset koster NOK 16,000 pr. person, <strike>og overskuddet vil g&aring; til
 del-finansiering av Oslo.pm sitt QA Hackathon som arrangeres 5. til 7.
@@ -117,7 +116,7 @@ april 2008.</strike></p>
 href="mailto:szabgab@gmail.com">szabgab@gmail.com</a> for
 p&aring;melding.</p>
 
-<p>Du kan og ta kontakt med Kai Andresen, <a
+<p>Du kan ogs&aring; ta kontakt med Kai Andresen, <a
 href="mailto:kai.andresen@ssb.no">kai.andresen@ssb.no</a>, for
 informasjon.</p>
 
