Fixes requested by Gabor
svn path=/trunk/oslo.pm.org/htdocs/; revision=82

--- a/kurs/2009-04-21-gabor-szabo-test-tutorial.html
+++ b/kurs/2009-04-21-gabor-szabo-test-tutorial.html
@@ -1,4 +1,4 @@
-<h1>4 dagers kurs om test-automatisering med Perl</h1>
+<h2>4 dagers kurs om test-automatisering med Perl</h1>
 
 <p>21. til 24. april, i Redpill-Linpro sine lokaler p&aring; Storo i
 Oslo. Kurset holdes p&aring; engelsk.</p>
@@ -70,13 +70,13 @@ webapplikasjoner og nettverksutstyr.</p>
 <ul>
   <li>Nye eksempler og &oslash;velser, spesielt med testing av web-tjenester</li>
   <li>Oppdateringer om mange av testing-modulene i Perl</li>
-  <li><a href="http://sourceforge.net/projects/smolder">Smolder</a></li>
+  <li>Innsamling av test-rapporter med <a href="http://sourceforge.net/projects/smolder">Smolder</a></li>
   <li>Integrasjon med tester i andre spr&aring;k som PHP, Python, Ruby og JavaScript</li>
 </ul>
 
 <p>Kurset holdes p&aring; Engelsk. Instrukt&oslash;r er Gabor Szabo
-(Perl Training Israel), og arrangeres av Gabor Szabo i samarbeid med
-<a href="http://oslo.pm.org/">Oslo Perl Mongers</a>
+(Perl Training Israel), og arrangeres av <a href="http://szabgab.com/">Gabor
+Szabo i samarbeid med <a href="http://oslo.pm.org/">Oslo Perl Mongers</a>
 og <a href="http://redpill-linpro.no/">Redpill-Linpro</a>.</p>
 
 <h2>Om instrukt&oslash;ren</h2>
@@ -107,8 +107,7 @@ Perl IDE</a>.</p>
 del-finansiering av Oslo.pm sitt QA Hackathon som arrangeres 5. til 7.
 april 2008.</strike></p>
 
-<p>Kurset har maks 12 deltagere. (P&aring;meldte pr. 6. feb:
-<strong>0 (null)</strong>. Venteliste: <strong>0 (null)</strong>.)</p>
+<p>Kurset har maks 12 deltagere.</p>
 
 <h2>P&aring;melding</h2>
 
