Fix URL to course info page
svn path=/trunk/oslo.pm.org/htdocs/; revision=84

--- a/arrangementer/2009-04-21-teste-kurs.html
+++ b/arrangementer/2009-04-21-teste-kurs.html
@@ -4,5 +4,5 @@
    sammen med Oslo.pm og <a href="http://www.redpill-linpro.no/">Redpill-Linpro</a>
    til en fire-dagers kurs i avansert testing, i Redpill-Linpro sine lokaler
    p&aring; Storo. For mer informasjon, se <a
-   href="http://oslo.pm.org/kurs-2009-04-21.shtml">kurs-sida</a> vi
+   href="http://oslo.pm.org/kurs.shtml">kurs-sida</a> vi
    opprettet for anledningen.</p>
