Tell about the profit donation to Padre
svn path=/trunk/oslo.pm.org/htdocs/; revision=85

--- a/kurs/2009-04-21-gabor-szabo-test-tutorial.html
+++ b/kurs/2009-04-21-gabor-szabo-test-tutorial.html
@@ -103,9 +103,9 @@ Perl IDE</a>.</p>
 
 <h2>Kursavgift</h2>
 
-<p>Kurset koster NOK 16,000 pr. person, <strike>og overskuddet vil g&aring; til
-del-finansiering av Oslo.pm sitt QA Hackathon som arrangeres 5. til 7.
-april 2008.</strike></p>
+<p>Kurset koster NOK 16,000 pr. person, og overskuddet vil g&aring; til
+vidreutvikling av <em><a href="http://padre.perlide.org/">Padre</a>, the Perl
+IDE</em>.</p>
 
 <p>Kurset har maks 12 deltagere.</p>
 
