- Fix HTML entities - Rewrite announcement footer
svn path=/trunk/oslo.pm.org/htdocs/; revision=91

--- a/arrangementer/2009-05-06-git.html
+++ b/arrangementer/2009-05-06-git.html
@@ -5,6 +5,6 @@
 18:00</strong>. Vi treffes p&aring; 
 <strong><a href="http://met.no/Om_oss/?module=Articles;action=Article.publicShow;ID=435" title="Link til veibeskrivelse">Meteorologisk Institutt</a>, p&aring; Blindern</strong>. (Avlastningsbygget ved Forskningsparken T-bane stasjon.)</p>
 
-<p>Tema for m&oslash;tet blir Marcus Ramberg sitt foredrag fra Go Open 2009, <strong>G(et)it Nå!</strong>.</p>
-<p><em>Versjonskontroll er et fundamentalt behov for å kunne drive strukturert og kontrollert utvikling. Foredraget tar for seg versjonskontroll-systemet Git, et system Linus Torvalds laget til utviklingen av Linux-kjernen. Vi ser på hvordan det skiller seg fra sentraliserte systemer som CVS, SVN og Perforce, og hvilke fordeler Git kan gi ditt utviklingsmiljø. Vi kommer også til å vise hvordan Git er bygget opp, og hvordan det fungerer under panseret. </em>
+<p>Tema for m&oslash;tet blir Marcus Ramberg sitt foredrag fra Go Open 2009, <strong>G(et)it N&aring;!</strong>.</p>
+<p><em>Versjonskontroll er et fundamentalt behov for &aring; kunne drive strukturert og kontrollert utvikling. Foredraget tar for seg versjonskontroll-systemet Git, et system Linus Torvalds laget til utviklingen av Linux-kjernen. Vi ser p&aring; hvordan det skiller seg fra sentraliserte systemer som CVS, SVN og Perforce, og hvilke fordeler Git kan gi ditt utviklingsmilj&oslash;. Vi kommer ogs&aring; til &aring; vise hvordan Git er bygget opp, og hvordan det fungerer under panseret. </em>
 </p>
