--- a/innkalling-bunn.html
+++ b/innkalling-bunn.html
@@ -3,10 +3,11 @@
 <!-- p>Etter det faglige vil vi forflytte oss til et av utestedene
 p&aring; Gr&uuml;nerl&oslash;kka for &aring; sosialisere.</p -->
 
-<p>Medlemsm&oslash;tene er &aring;pne for alle Perl-interesserte! For
-&aring; melde deg inn i Oslo.pm, trenger du bare &aring; abonnere
-p&aring; <a title="Til side for listep&aring;melding"
+<p>Medlemsm&oslash;tene er &aring;pne for alle. For
+&aring; melde deg inn i Oslo.pm og f&aring; varsel n&aring;r ting skjer
+trenger du bare &aring; abonnere p&aring; <a
+title="Til side for listep&aring;melding"
 href="http://mail.pm.org/mailman/listinfo/oslo">annonserings-lista</a>
 v&aring;r.</p>
 
-<p>Velkommen til alle! :)</p>
+<p>Velkommen!</p>
