Use a better URL to Marhaba cafe.
svn path=/trunk/oslo.pm.org/htdocs/; revision=96

--- a/arrangementer/2009-06-03-sosialt.html
+++ b/arrangementer/2009-06-03-sosialt.html
@@ -3,7 +3,7 @@
 
 <p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 3. Juni 2008, klokken
 18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+<strong><a href="http://vibb.no/Company.asp?CompanyID=8438" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
 
 <p>
 Tema: Sosialiteter og nettverkspils og alt annet som er interessant.
