--- a/arrangementer/2009-11-04-sosialt.html
+++ b/arrangementer/2009-11-04-sosialt.html
@@ -2,9 +2,9 @@
 <h2>November-medlemsm&oslash;tet i Oslo.pm</h2>
 
 <p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 4. November 2009, klokken
-18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://vibb.no/Company.asp?CompanyID=8438" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+18:30</strong>. Vi treffes hos
+<strong><a href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=m%C3%B8lleparken+21,oslo,+norge&sll=55.791631,12.268724&sspn=0.006852,0.01929&ie=UTF8&t=h&hq=&hnear=M%C3%B8lleparken,+Oslo,+Norway&ll=59.928549,10.756774&spn=0.005365,0.01929&z=16" title="Link til karttjeneste">ABC Startsiden</a>, Sagveien 21A, i M&oslash;lleparken</strong>. Ring Andreas Marienborg (+47 982 93 610) om du ikke finner frem.</p>
 
 <p>
-Tema: Sosialiteter og nettverkspils og alt annet som er interessant, samt forberedelser til &aring;rsm&oslash;tet.
+Tema: Vi har erfaringsutveksling rundt web-rammeverk! Marcus Ramberg (fra Catalyst-prosjektet) gir en kort innleding og sammenligning, og s&aring; er ordet fritt. Etter m&oslash;tet drar vi ut og sosialiserer.
 </p>
