Fix missing &eacute;
svn path=/trunk/oslo.pm.org/htdocs/; revision=103

--- a/vedtekter/vedtekter-2007-11-29.html
+++ b/vedtekter/vedtekter-2007-11-29.html
@@ -109,7 +109,7 @@
 
         <li>Varamedlemmer</li>
 
-        <li>Valgkomité p&aring; 3 medlemmer</li>
+        <li>Valgkomit&eacute; p&aring; 3 medlemmer</li>
 
         <li>Eventuelle andre valg etter forslag fra styret</li>
       </ul>
