--- a/vedtekter/vedtekter-2006-11-01.html
+++ b/vedtekter/vedtekter-2006-11-01.html
@@ -108,7 +108,7 @@
 
         <li>Varamedlemmer</li>
 
-        <li>Valgkomité p&aring; 3 medlemmer</li>
+        <li>Valgkomit&eacute; p&aring; 3 medlemmer</li>
 
         <li>Eventuelle andre valg etter forslag fra styret</li>
       </ul>
