--- a/arrangementer/bruk-wikien-istedet.html
+++ b/arrangementer/bruk-wikien-istedet.html
@@ -1,6 +1,7 @@
 <h2>Hva skjer i Oslo.pm?</h2>
-<p>Vi har flyttet oversikten over aktivitetene v&aring;re til wikien! Der kan du også abbonnere p&aring; endringer og oppdateringer</p>
+<p>Vi har flyttet oversikten over aktivitetene v&aring;re til wikien! Der kan du også abbonnere p&aring; endringer og oppdateringer, og evt. bidra p&aring; andre vis.</p>
 
 <ul>
   <li><a href="http://wiki.oslo.pm.org/">Programmet</a> på wiki-siden.</li>
+  <li><a href="kurs.shtml">Kurs</a> i regi av Oslo.pm.</li>
 </ul>
