MST's course text updated
svn path=/trunk/oslo.pm.org/htdocs/; revision=111

--- a/kurs/2010-05-10-matt-s-trout-dbic-moose.html
+++ b/kurs/2010-05-10-matt-s-trout-dbic-moose.html
@@ -1,21 +1,27 @@
-<h2>Fire 1-dagers kurs om DBIx::Class og Moose</h1>
+<h1>Fire 1-dagers kurs om DBIx::Class og Moose</h1>
 
 <p>10. til 14. mai 2010, i Redpill-Linpro sine lokaler p&aring; Storo i
 Oslo. Kurset holdes p&aring; engelsk.</p>
 
-<p></p>
+<p>Oslo.pm og Redpill Linpro arrangerer kurs i DBIx::Class og Moose, og 
+flyr inn (om asken legger seg) <a href="http://www.shadowcat.co.uk/resources/bios/matt_short/">Matt S. Trout</a> fra Shadowcat Systems for 
+å holde kursene! :D</p>
+
+<p>Styret i Oslo.pm har tenkt på hvordan få interessante foredragsholdere til
+Oslo, og hvordan gjøre kurstilbudet mer spennende for oss som jobber mye med
+Perl. Denne gangen prøver å fly inn oppadgående og kjente bidragsytere
+i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at
+vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet
+skal få en liten "takk" i form av kursavgiften.</p>
 
 <h2>M&aring;lgruppe</h2>
 
-<p></p>
+<p>Kursene er for Perl-programmerere spesielt interessert i &aring; l&aelig;re  om <em>Object-Relational Mappers</em> med <a href="http://search.cpan.org/~frew/DBIx-Class/">DBIx::Class</a> og <em>Objekt-orientert programmering</em> med <a href="http://moose.perl.org/">Moose</a>. Det vil bli gjennomf&oslash;rt to introduksjonskurs i hver av temaene, etterfulgt av vidreg&aring;ende kurs i de samme.</p>
 
-<h2>Emner</h2>
-
-<p></p>
 
 <h2>Kursformat</h2>
 
-<p>Fire &eacute;n-dagers kurs, hver med moduler &aacute; 90 minutter hver.</p>
+<p>Fire &eacute;n-dagers kurs, hver med 4 moduler &aacute; 90 minutter hver.</p>
 
 <h2>Tid/Sted</h2>
 <dl>
@@ -23,28 +29,72 @@ Oslo. Kurset holdes p&aring; engelsk.</p>
  <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
 
  <dt>Tid:</dt>
- <dd><strong>Tirsdag 10. mai</strong>: 09:00-17:00, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-dbixclass-basics/">DBIx::Class basics</a>.</dd>
- <dd><strong>Onsdag 11. mai</strong>: 09:00-17:00, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-dbixclass-advanced/">DBIx::Class advanced</a>.</dd>
- <dd><strong>Torsdag 12. mai</strong>: 09:00-17:00, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-moose-basics/">Moose basics</a>.</dd>
- <dd><strong>Fredag 14. mai</strong>: 09:00-17:00, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-moose-advanced/">Moose advanced</a>.</dd>
+ <dd><strong>Mandag 10. mai</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-dbixclass-basics/">DBIx::Class basics</a>.</dd>
+ <dd><strong>Tirsdag 11. mai</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-dbixclass-advanced/">DBIx::Class advanced</a>.</dd>
+ <dd><strong>Onsdag 12. mai</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-moose-basics/">Moose basics</a>.</dd>
+ <dd><strong>Fredag 14. mai</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-moose-advanced/">Moose advanced</a>.</dd>
 </dl>
 
 <h2>Forkunnskaper</h2>
 
-<p>Lengere erfaring med programmering i Perl er anbefalt. </p>
+<p>Lengere erfaring med programmering i Perl er anbefalt.</p>
 
 <h2>Innhold</h2>
-
-
 
 <p>Kurset holdes p&aring; Engelsk. Instrukt&oslash;r er Matt S. Trout
 (Shadowcat Systems), og arrangeres av <a href="http://www.shadowcat.co.uk/news/archive/2010/april/oslo/">Shadowcat Systems</a>
 i samarbeid med <a href="http://oslo.pm.org/">Oslo Perl Mongers</a>
 og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 
+<h3>DBIx::Class basics (mandag 10. mai)</h3>
+<p>
+<dl>
+  <dt>Unit 1:</dt><dd>Creating a schema and simple CRUD</dd>
+  <dt>Unit 2:</dt><dd>search() and search_related() - the building blocks of resultset methods</dd>
+  <dt>Unit 3:</dt><dd>Relationships, join and prefetch</dd>
+  <dt>Unit 4:</dt><dd>Deploy, upgrade, and test fixtures</dd>
+<dl>
+</p>
+
+<h3>DBIx::Class advanced (tirsdag 11. mai)</h3>
+<p>
+<dl>
+  <dt>Unit 1:</dt><dd>Resultset chaining to break up complex queries</dd>
+  <dt>Unit 2:</dt><dd>*_related join traversal and transaction building</dd>
+  <dt>Unit 3:</dt><dd>Access control with RestrictWithObject</dd>
+  <dt>Unit 4:</dt><dd>Query profiling and optimisation</dd>
+</dl>
+</p>
+
+<h3>Moose basics (onsdag 12. mai)</h3>
+<p>
+<dl>
+  <dt>Unit 1:</dt><dd>Moose as a better accessor generator</dd>
+  <dt>Unit 2:</dt><dd>Roles and method modifiers</dd>
+  <dt>Unit 3:</dt><dd>Types and type libraries</dd>
+  <dt>Unit 4:</dt><dd>Attribute caching, subclassing and delegation</dd>
+</dl>
+</p>
+
+<h3>Moose advanced (fredag 14. mai)</h3>
+<p>
+<dl>
+  <dt>Unit 1:</dt><dd>Native Traits for data structure attributes</dd>
+  <dt>Unit 2:</dt><dd>Coercions and parameterized types</dd>
+  <dt>Unit 3:</dt><dd>Parameterized roles</dd>
+  <dt>Unit 4:</dt><dd>Type checked method signatures with MooseX::Declare</dd>
+</dl>
+</p>
+
+<br />
+
 <h2>Om instrukt&oslash;ren</h2>
 
-<p></p>
+<p>
+Biografi: <a href="http://www.shadowcat.co.uk/resources/bios/matt_short/">http://www.shadowcat.co.uk/resources/bios/matt_short/</a>.
+
+<blockquote><em>Matt is a co-maintainer of the Catalyst web framework, the creator of the DBIx::Class ORM, a core team member for the Moose project, and contributor to several other CPAN projects. He's a frequent speaker at conferences, and well known in the Perl community for his colourful presentations.</em></blockquote>
+</p>
 
 <p></p>
 
@@ -60,5 +110,8 @@ og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 <h2>P&aring;melding</h2>
 
 <p>P&aring;melding skjer via <a href="https://training.redpill-linpro.com/category/perl/">Redpill Linpro sin kursside</a>.</p>
+
+<p><strong>For at en kursmodul skal avholdes</strong> må det være <em>4 (fire) eller fler</em> påmeldte deltagere to uker før kurset. Sjekk kalenderen!</p>
+
 
 
