Cosmetic changes to course texts
svn path=/trunk/oslo.pm.org/htdocs/; revision=112

--- a/arrangementer/bruk-wikien-istedet.html
+++ b/arrangementer/bruk-wikien-istedet.html
@@ -3,5 +3,5 @@
 
 <ul>
   <li><a href="http://wiki.oslo.pm.org/">Programmet</a> på wiki-siden.</li>
-  <li><a href="kurs.shtml">Kurs</a> i regi av Oslo.pm.</li>
+  <li>10-14 mai 2010: <a href="kurs.shtml">Kurs</a> i regi av Oslo.pm og Redpill Linpro!</li>
 </ul>
