--- a/kurs/2010-05-10-matt-s-trout-dbic-moose.html
+++ b/kurs/2010-05-10-matt-s-trout-dbic-moose.html
@@ -14,7 +14,7 @@ i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at
 vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet
 skal få en liten "takk" i form av kursavgiften.</p>
 
-<h2>M&aring;lgruppe</h2>
+<h1>M&aring;lgruppe</h1>
 
 <p>Kursene er for Perl-programmerere spesielt interessert i &aring; l&aelig;re  om <em>Object-Relational Mappers</em> med <a href="http://search.cpan.org/~frew/DBIx-Class/">DBIx::Class</a> og <em>Objekt-orientert programmering</em> med <a href="http://moose.perl.org/">Moose</a>. Det vil bli gjennomf&oslash;rt to introduksjonskurs i hver av temaene, etterfulgt av vidreg&aring;ende kurs i de samme.</p>
 
@@ -23,7 +23,7 @@ skal få en liten "takk" i form av kursavgiften.</p>
 
 <p>Fire &eacute;n-dagers kurs, hver med 4 moduler &aacute; 90 minutter hver.</p>
 
-<h2>Tid/Sted</h2>
+<h1>Tid/Sted</h1>
 <dl>
  <dt>Sted:</dt>
  <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
@@ -35,18 +35,18 @@ skal få en liten "takk" i form av kursavgiften.</p>
  <dd><strong>Fredag 14. mai</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/matt-s-trout-moose-advanced/">Moose advanced</a>.</dd>
 </dl>
 
-<h2>Forkunnskaper</h2>
+<h1>Forkunnskaper</h1>
 
 <p>Lengere erfaring med programmering i Perl er anbefalt.</p>
 
-<h2>Innhold</h2>
+<h1>Innhold</h1>
 
 <p>Kurset holdes p&aring; Engelsk. Instrukt&oslash;r er Matt S. Trout
 (Shadowcat Systems), og arrangeres av <a href="http://www.shadowcat.co.uk/news/archive/2010/april/oslo/">Shadowcat Systems</a>
 i samarbeid med <a href="http://oslo.pm.org/">Oslo Perl Mongers</a>
 og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 
-<h3>DBIx::Class basics (mandag 10. mai)</h3>
+<h2>DBIx::Class basics (mandag 10. mai)</h2>
 <p>
 <dl>
   <dt>Unit 1:</dt><dd>Creating a schema and simple CRUD</dd>
@@ -56,7 +56,7 @@ og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 <dl>
 </p>
 
-<h3>DBIx::Class advanced (tirsdag 11. mai)</h3>
+<h2>DBIx::Class advanced (tirsdag 11. mai)</h2>
 <p>
 <dl>
   <dt>Unit 1:</dt><dd>Resultset chaining to break up complex queries</dd>
@@ -66,7 +66,7 @@ og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 </dl>
 </p>
 
-<h3>Moose basics (onsdag 12. mai)</h3>
+<h2>Moose basics (onsdag 12. mai)</h2>
 <p>
 <dl>
   <dt>Unit 1:</dt><dd>Moose as a better accessor generator</dd>
@@ -76,7 +76,7 @@ og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 </dl>
 </p>
 
-<h3>Moose advanced (fredag 14. mai)</h3>
+<h2>Moose advanced (fredag 14. mai)</h2>
 <p>
 <dl>
   <dt>Unit 1:</dt><dd>Native Traits for data structure attributes</dd>
@@ -88,20 +88,14 @@ og <a href="http://redpill-linpro.no/">Redpill Linpro</a>.</p>
 
 <br />
 
-<h2>Om instrukt&oslash;ren</h2>
+<h1>Om instrukt&oslash;ren</h1>
 
-<p>
-Biografi: <a href="http://www.shadowcat.co.uk/resources/bios/matt_short/">http://www.shadowcat.co.uk/resources/bios/matt_short/</a>.
+<p> Biografi: <a href="http://www.shadowcat.co.uk/resources/bios/matt_short/">http://www.shadowcat.co.uk/resources/bios/matt_short/</a>.
 
-<blockquote><em>Matt is a co-maintainer of the Catalyst web framework, the creator of the DBIx::Class ORM, a core team member for the Moose project, and contributor to several other CPAN projects. He's a frequent speaker at conferences, and well known in the Perl community for his colourful presentations.</em></blockquote>
-</p>
-
-<p></p>
-
-<p></p>
+<blockquote><em>Matt is a co-maintainer of the Catalyst web framework, the creator of the DBIx::Class ORM, a core team member for the Moose project, and contributor to several other CPAN projects. He's a frequent speaker at conferences, and well known in the Perl community for his colourful presentations.</em></blockquote> </p>
 
 
-<h2>Kursavgift</h2>
+<h1>Kursavgift</h1>
 
 <p>Kurset koster NOK 4500 pr. person per dag, og overskuddet vil g&aring; til videre finansiering av Matt S. Trout og Shadowcat Systems sine <a href="http://search.cpan.org/~mstrout/">betydelige bidrag</a> til Perl og CPAN-milj&oslash;ene.</p>
 
@@ -112,6 +106,5 @@ Biografi: <a href="http://www.shadowcat.co.uk/resources/bios/matt_short/">http:/
 <p>P&aring;melding skjer via <a href="https://training.redpill-linpro.com/category/perl/">Redpill Linpro sin kursside</a>.</p>
 
 <p><strong>For at en kursmodul skal avholdes</strong> må det være <em>4 (fire) eller fler</em> påmeldte deltagere to uker før kurset. Sjekk kalenderen!</p>
-
 
 
