Correct name of Cosimo's workplace
svn path=/trunk/oslo.pm.org/htdocs/; revision=120

--- a/styre/styre-2011-01-04.html
+++ b/styre/styre-2011-01-04.html
@@ -18,7 +18,7 @@
 
 <h3>Varamedlemmer</h3>
 <ul>
- <li>Cosimo Streppone (<a href="http://opera.no/">Opera AS</a>)</li>
+ <li>Cosimo Streppone (<a href="http://opera.no/">Opera Software ASA</a>)</li>
 </ul>
 
 <h3>Valgkomit&eacute;</h3>
