--- a/styre/styre-2011-06-01.html
+++ b/styre/styre-2011-06-01.html
@@ -1,6 +1,6 @@
 <h1>Oslo.pm sitt styre 2011</h1>
 
-<p>Styret ble valgt inn p&aring; ekstraordin&aelig;rt &aring;rsm&oslash;tet 2011-06-01.</p>
+<p>Styret ble valgt inn p&aring; ekstraordin&aelig;rt &aring;rsm&oslash;te 2011-06-01.</p>
 
 <hr />
 
