Clearer purpose/formatting fixes
svn path=/trunk/oslo.pm.org/htdocs/; revision=133

--- a/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
+++ b/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
@@ -1,14 +1,13 @@
-<h1>To 1-dagers kurs om Modern Perl og Perl Best Practices</h1>
+<h1>To 1-dagers kurs om <em>Modern Perl</em> og <em>Perl Best Practices</em></h1>
 
-<p>11. og 12. august 2011, i Redpill-Linpro sine lokaler p&aring; Storo i
+<p>11. og 12. august 2011, i Redpill Linpro sine lokaler p&aring; Storo i
 Oslo. Kurset holdes p&aring; engelsk.</p>
 
-<p>Oslo.pm og Redpill Linpro arrangerer kurs i Modern Perl og Perl Best Practices, og henter inn <a href="http://damian.conway.org/About_us/Bio_formal.html">Damian Conway</a> fra Thoughtstream for 
-å holde kursene! :D</p>
+<p>Oslo.pm og Redpill Linpro arrangerer kurs i Modern Perl og Perl Best Practices, og henter inn <a href="http://damian.conway.org/About_us/Bio_formal.html">Damian Conway</a> fra Thoughtstream for å holde kursene!</p>
 
 <p>Styret i Oslo.pm har tenkt på hvordan få interessante foredragsholdere til Oslo, og hvordan gjøre kurstilbudet mer spennende for oss som jobber mye med Perl. Vi skaffer oppadgående og kjente bidragsytere i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet skal få en liten "takk" i form av kursavgiften.</p>
 
-<p>Nytt denne gangen, er at deler av kursavgiften går til Oslo Perl Mongers! På denne måten kan vi få ressurser for å skape et bedre fagmiljø for alle i Oslo!</p>
+<p>Nytt denne gangen er at deler av kursavgiften går til Oslo Perl Mongers! På denne måten får vi ressurser for å skape et bedre fagmiljø for alle i Oslo.</p>
 
 <h1>M&aring;lgruppe</h1>
 
@@ -31,7 +30,7 @@ Oslo. Kurset holdes p&aring; engelsk.</p>
 
 <h1>Forkunnskaper</h1>
 
-<p>Lengere erfaring med programmering i Perl er anbefalt.</p>
+<p>Erfaring med programmering i Perl er anbefalt.</p>
 
 <h1>Innhold</h1>
 
@@ -40,20 +39,20 @@ Oslo. Kurset holdes p&aring; engelsk.</p>
 
 <h2>Perl Best Practice</h2>
 
-<p>One of the major challenges of using Perl in a development environment is that Perl's "More Than One Way To Do It" philosophy often means there are far too many choices when it comes to solving a particular problem using the language. This makes coding standards and the use of best-practice techniques especially important in Perl development. </p>
+<blockquote><p>One of the major challenges of using Perl in a development environment is that Perl's "More Than One Way To Do It" philosophy often means there are far too many choices when it comes to solving a particular problem using the language. This makes coding standards and the use of best-practice techniques especially important in Perl development. </p>
 
-<p>The course explores maintainable, robust, and efficient coding practices for <a href="http://damian.conway.org/Courses/BestPractice.html">many situations</a>.</p>
+<p>The course explores maintainable, robust, and efficient coding practices for <a href="http://damian.conway.org/Courses/BestPractice.html">many situations</a>.</p></blockquote>
 
 
 <h2>Introduction to Modern Perls (5.10, 5.12, and 5.14)</h2>
 
-<p>Perl 5.10 added more useful features to the language than any other release since Perl 5.0.0. However, many people are now using Perl 5.10, without taking advantage of those new features.</p>
+<blockquote><p>Perl 5.10 added more useful features to the language than any other release since Perl 5.0.0. However, many people are now using Perl 5.10, without taking advantage of those new features.</p>
 
 <p>Perl 5.12 and 5.14 are the latest releases of Perl and provide important refinements and enhancements to the extra functionality introduced in Perl 5.10. Perl 5.12 was released in early 2010, and Perl 5.14 a year later.</p>
 
 <p>This one-day tutorial provides a detailed introduction to the new and improved features of these three modern versions of Perl 5, along with practical examples of how they can improve the performance, robustness, and maintainability of your code.</p>
 
-<p>Topics covered include <a href="http://damian.conway.org/Courses/NewPerl.html">many features</a>.</p>
+<p>Topics covered include <a href="http://damian.conway.org/Courses/NewPerl.html">many features</a>.</p></blockquote>
 
 <br />
 
